archive/old-cluster-configs/cluster-a/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nf-a
  namespace: nf-a-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nf-a
  template:
    metadata:
      labels:
        app: nf-a
    spec:
      containers:
        - name: veramo-nf-a
          image: veramo-nf:phase7
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: veramo-nf-a
  namespace: nf-a-namespace
spec:
  selector:
    app: nf-a
  ports:
    - port: 3000
      targetPort: 3000
      name: http
